<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView android:text="@string/Programa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cuadro"
            android:id="@+id/rCuadro"
            android:onClick="Click"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Rectangulo"
            android:id="@+id/rRectangulo"
            android:onClick="Click"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Circulo"
            android:id="@+id/rCirculo"
            android:onClick="Click"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Triangulo"
            android:id="@+id/rTriangulo"
            android:onClick="Click"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:id="@+id/lLado">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lado"/>

        <EditText
            android:layout_width="200px"
            android:layout_height="wrap_content"
            android:id="@+id/eLado"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:id="@+id/lAltura">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altura"/>

        <EditText
            android:layout_width="200px"
            android:layout_height="wrap_content"
            android:id="@+id/eAltura"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:id="@+id/lBase">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/base"/>

        <EditText
            android:layout_width="200px"
            android:layout_height="wrap_content"
            android:id="@+id/eBase"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:id="@+id/lRadio">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio"/>

        <EditText
            android:layout_width="200px"
            android:layout_height="wrap_content"
            android:id="@+id/eRadio"
            android:inputType="number"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bCalcular"
        android:id="@+id/bCalcular"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Area"/>

        <EditText
            android:layout_width="200px"
            android:layout_height="wrap_content"
            android:id="@+id/eArea"
            android:inputType="number"/>
    </LinearLayout>


</LinearLayout>
